# snipsnap

./: .gitignore  Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
src/: auth.rs  error.rs  main.rs  resource.rs  win_ui.rs
